[project]
name = "security_check"
description = "Check Ubuntu OS / kernel security"
license = {text = "MIT" }
version = "1.0"
dependencies =  ['requests']
requires-python= ">= 3.10"
readme = "README.md"
authors = [
    {name = "Gerard"},
    {email = "gweatherby@uchc.edu"}
]

[tool.setuptools]
package-dir = {"" = "src" }  # Tells setuptools that the root package is in the "src" directory

[tool.setuptools.packages.find]
where = ["src"]  # Specify the "src" directory to look for packages


[project.scripts]
security_check = "security_check.main:main"

[project.optional-dependencies] 
# test = ['pytest']

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "nmrbox"
url = "https://apt.nmrbox.org/pip"

